<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="72dp"
    android:id="@+id/wrapperLinearLayout"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/new_user"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>